updates to contacts

--- a/contact.html
+++ b/contact.html
@@ -471,7 +471,7 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>​Raina M. Ranaghan</h5>
-                                        <p>​Raina M. Ranaghan is the Career Placement Officer for Electrial and Computer Engineering graduate students.</p>
+                                        <p>​Raina M. Ranaghan is the Career Placement Officer for Electrical and Computer Engineering graduate students.</p>
                                         <ul class="social">
                                             <li><a href="mailto:rmr2185@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
@@ -588,7 +588,7 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>Irina Khenkin</h5>
-                                        <p>Irina establishes and maintains relationships with employers in the Chemical Engineering industries to encourage the hiring of students. </p>
+                                        <p>Irina is the Career Placement Officer for Chemical Engineering and Earth & Environmental Engineering graduate students </p>
                                         <ul class="social">
                                             <li><a href="mailto:ik2380@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
@@ -605,7 +605,7 @@
                             </div>
                             <div class="team-item-info">
                                 <h5>Irina Khenkin</h5>
-                                <p class="">Career Placement Officer, Chemical Engineering</p>
+                                <p class="">Career Placement Officer, Chemical Engineering and Earth & Environmental Engineering</p>
                             </div>
                         </div>
                     </div>
@@ -617,9 +617,9 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>Emily-Anne McCormack</h5>
-                                        <p>Emily establishes and maintains relationships with employers in the Chemical Engineering industries to encourage the hiring of students. </p>
+                                        <p>Emily-Anne is the Career Placement Officer for Civil Engineering and Mechanical Engineering graduate students. </p>
                                         <ul class="social">
-                                            <li><a href="mailto:ik2380@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                            <li><a href="mailto:em3265@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
                                         <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -634,7 +634,7 @@
                             </div>
                             <div class="team-item-info">
                                 <h5>Emily-Anne McCormack</h5>
-                                <p class="">Career Placement Officer, Chemical Engineering</p>
+                                <p class="">Career Placement Officer, Civil Engineering and Mechanical Engineering</p>
                             </div>
                         </div>
                     </div>
@@ -681,7 +681,7 @@
                                         <h5>Di Wang</h5>
                                         <p>Di establishes and maintains relationships with employers in the Chemical Engineering industries to encourage the hiring of students. </p>
                                         <ul class="social">
-                                            <li><a href="mailto:ik2380@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                            <li><a href="mailto:dw2778@tc.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
                                         <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -696,7 +696,7 @@
                             </div>
                             <div class="team-item-info">
                                 <h5>Di Wang</h5>
-                                <p class="">Program Manager, PDL</p>
+                                <p class="">PDL Intern</p>
                             </div>
                         </div>
                     </div>
@@ -710,7 +710,7 @@
                                         <h5>Amanda Gong</h5>
                                         <p>Amanda establishes and maintains relationships with employers in the Chemical Engineering industries to encourage the hiring of students. </p>
                                         <ul class="social">
-                                            <li><a href="mailto:ik2380@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                            <li><a href="mailto:xg2240@tc.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
                                         <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -725,7 +725,7 @@
                             </div>
                             <div class="team-item-info">
                                 <h5>Amanda Gong</h5>
-                                <p class="">Career Placement Officer, Chemical Engineering</p>
+                                <p class="">PDL Intern</p>
                             </div>
                         </div>
                     </div>
