--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <!-- Intro -->
         <section id="intro" class="intro">
             <div class="video_wrapper" style="width=100%;background-color:rgba(0,0,0,1);">
-                <div class="video_container" style="width:60%;margin:auto">
-                     <video class="intro-video video-js vjs-default-skin" preload="" autoplay loop muted width="100%" height="auto">
+                <div class="video_container" style="width:100%;margin:auto">
+                     <video class="intro-video video-js vjs-default-skin" preload="" autoplay loop muted width="100%" height="100%">
                         <source src="media/PDL-Video 2.mp4" type='video/mp4' />
                         <source src="media/PDL-Video 2.webm" type='video/webm' />
                     </video>
